--- a/src/configs/config.json
+++ b/src/configs/config.json
@@ -1,12 +1,12 @@
 {
     "tag": "",
-    "welcomeChannel": "",
+    "welcomeChannel": "975119144364154960",
     "joinChannel": "",
     "leaveChannel": "",
-    "joinleaveChannel": "",
+    "joinleaveChannel": "975119145144311821",
     "emojiStar": "",
     "emojiTada": ":tada:",
     "emojiCheck": "",
     "emojiX": "",
-    "yetkiRegister": ""
+    "yetkiRegister": "975802191002624030"
 }
